--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="skill-row">
         <img class="travel-img" src="https://media4.giphy.com/media/3ohze1JslWBrRxa3Dy/giphy.webp?cid=ecf05e47jwiqtlqx32nwbhzd57n4hk7j598e73tvij0q5wzn&rid=giphy.webp&ct=g" alt="travel-img">
         <h3>Travel</h3>
-        <p>I love to travel 🗺️ and go to different coutnries to experience the culture and food hoping to have a wonderful experience with people along the way.</p>
+        <p>I love to travel 🗺️ and go to different countries to experience the culture and food hoping to have a wonderful experience with people along the way.</p>
       </div>
     </div>
     <hr>
